[package]
name = "hex"
version = "0.4.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex/"
repository = "https://github.com/KokaKiwi/rust-hex"
edition = "2018"

[features]
default = ["std", "casperlabs-contract-ffi/std"]
std = []

[[bench]]
name = "hex"
harness = false

[dev-dependencies]
base16 = "0.2"
binascii = "0.1"
casperlabs-contract-ffi = "0.19.0"
criterion = "0.3"
faster-hex = "0.4"
rand = "0.7"
rustc-hex = "2.0"
